Added MoqawalatiDAOForXMLMarshalling