@@ -2,7 +2,8 @@ DEVELOPER_HOME=~/Developer
 echo DEVELOPER_HOME=$DEVELOPER_HOME
 FLASH_PLAYER_COMMAND="$DEVELOPER_HOME/tools/Flash Player.app/Contents/MacOS/Flash Player"
 echo FLASH_PLAYER_COMMAND=$FLASH_PLAYER_COMMAND
-MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
+# MAVEN_OPTS="-Xmn128m -Xms1024m -Xmx1024m -Xss2m -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+UseParallelGC"
+MAVEN_OPTS="-XX:+UseParallelGC"
 echo MAVEN_OPTS=$MAVEN_OPTS
 
 cd ../frameworks/source/alkhwarizmixMavenRunAnt
